--- a/StudentSupport/templates/home_auth/forgot_password.html
+++ b/StudentSupport/templates/home_auth/forgot_password.html
@@ -53,6 +53,7 @@
                         </div>
                         <div class="card-body">
                             <form class="form" role="form" action="{% url 'change_password' %}" method="post">
+                                {% csrf_token %}
                                 <div class="form-group" id="password-div">
                                     <label class="col-form-label" for="password">New Password</label>
                                     <input type="password" class="form-control" minlength="6" maxlength="16" id="password" name="password" onblur="validate_pwd()" required="">
@@ -120,7 +121,7 @@
                 if(validate_pwd()){
                     btn.classList.remove('btn-disabled');
                     btn.classList.add('btn-primary');
-                    btn.disabled = false;
+                    btn.removeAttribute('disabled');
                 }
                 else {
                     btn.classList.remove('btn-primary');
