--- a/StudentSupport/templates/home_auth/index.html
+++ b/StudentSupport/templates/home_auth/index.html
@@ -396,7 +396,7 @@
                             <h3 class="heading">Certified Teachers</h3>
                             <blockquote class="blockquote text-right">
                                 <p class="m-b-0"><q>The mediocre teacher tells. The good teacher explains. The superior teacher demonstrates. The great teacher inspires.</q></p>
-                                <footer class="blockquote-footer">William A. Ward</footer>
+                                <footer class="blockquote-footer" style="color: red">William A. Ward</footer>
                             </blockquote>
                         </div>
                     </div>
@@ -410,12 +410,12 @@
                             <h3 class="heading">Special Education</h3>
                             <blockquote class="blockquote text-right">
                                 <p class="m-b-0"><q>It is a thousand times better to have common sense without education than to have education without common sense.</q></p>
-                                <footer class="blockquote-footer">Robert G. Ingersoll</footer>
+                                <footer class="blockquote-footer" style="color: red">Robert G. Ingersoll</footer>
                             </blockquote>
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4 d-flex services align-self-stretch pb-4 px-4 ftco-animate bg-fifth">
+                <div class="col-md-4 d-flex services align-self-stretch pb-4 px-4 ftco-animate bg-secondary">
                     <div class="media block-6 d-block text-center">
                         <div class="icon d-flex justify-content-center align-items-center">
                             <span class="flaticon-books"></span>
@@ -424,7 +424,7 @@
                             <h3 class="heading">Book &amp; Library</h3>
                             <blockquote class="blockquote text-right" style="color:#fffabb">
                                 <p class="m-b-0"><q>Reading gives us someplace to go when we have to stay where we are. </q></p>
-                                <footer class="blockquote-footer">Mason Cooley</footer>
+                                <footer class="blockquote-footer" style="color: red">Mason Cooley</footer>
                             </blockquote>
                         </div>
                     </div>
@@ -674,7 +674,7 @@
     <script src="{% static 'assets/landing/js/aos.js' %}"></script>
     <script src="{% static 'assets/landing/js/jquery.animateNumber.min.js' %}"></script>
     <script src="{% static 'assets/landing/js/scrollax.min.js' %}"></script>
-    <script src="{% static 'assets/landing/js/google-map.js' %}"></script>
+{#    <script src="{% static 'assets/landing/js/google-map.js' %}"></script>#}
     <script src="{% static 'assets/landing/js/main.js' %}"></script>
     <!-- sweet alert js -->
     <script type="text/javascript" src="{% static 'bower_components/sweetalert/js/sweetalert.min.js' %}"></script>
