--- a/StudentSupport/templates/principal/average feedback.html
+++ b/StudentSupport/templates/principal/average feedback.html
@@ -169,7 +169,7 @@
                 <div class="navbar-wrapper">
                     <div class="navbar-logo">
                         <a href="index-1.htm">
-                            <img class="img-fluid" src="{% static 'assets/images/logo.png' %}" alt="Theme-Logo">
+                            <img class="img-fluid" src="{% static 'assets/images/logo_sss3.png' %}" alt="Theme-Logo">
                         </a>
                     </div>
                     <div class="navbar-container container-fluid">
