--- a/StudentSupport/templates/principal/manage_committees.html
+++ b/StudentSupport/templates/principal/manage_committees.html
@@ -117,6 +117,7 @@
         </div>
     </div>
     <!-- Add Committee Modal End -->
+
     <div id="pcoded" class="pcoded">
         <div class="pcoded-overlay-box"></div>
         <div class="pcoded-container navbar-wrapper">
@@ -225,10 +226,10 @@
                                                                                 <span class="icofont icofont-ui-delete"></span>
                                                                             </button>
                                                                             <button type="button" class="btn_save btn btn-primary waves-effect waves-light active" style="float: none;margin: 5px;">
-                                                                                <span class="icofont icofont-check"></span>
+                                                                                <span class="icofont icofont-ui-check"></span>
                                                                             </button>
                                                                             <button type="button" class="btn_cancel btn btn-danger waves-effect waves-light" style="float: none;margin: 5px;">
-                                                                                <span class="icofont icofont-close"></span>
+                                                                                <span class="icofont icofont-ui-close"></span>
                                                                             </button>
                                                                         </div>
                                                                     </td>
