--- a/StudentSupport/templates/principal/principal_dashboard.html
+++ b/StudentSupport/templates/principal/principal_dashboard.html
@@ -169,21 +169,28 @@
                                         <div class="row">
                                             {% for i in committees %}
                                                 <div class="col-xl-4 col-md-6">
-                                                    <a href="{% url 'committee_dashboard' committee=i.committee_name %}">
-                                                        <div class="card social-card bg-simple-c-blue">
-                                                            <div class="card-block">
-                                                                <div class="row align-items-center">
-                                                                    <div class="col-auto">
-                                                                        <i class="feather icon-mail f-34 text-c-blue social-icon"></i>
-                                                                    </div>
-                                                                    <div class="col">
-                                                                        <h4>{{ i.committee_name }}</h4>
-                                                                        <p>{{ i.chairperson.name }}</p>
-                                                                        <p>Total Members : 120</p>
-                                                                    </div>
-                                                                </div>
-                                                            </div>
-                                                        </div>
+                                                    <a href="{% url 'member_dashboard' com_id=i.id %}">
+                                                        <script type="text/javascript">
+                                                            var bg_color = ['bg-simple-c-green', 'bg-c-blue', 'bg-c-pink'];
+                                                            var text_color = ['text-c-green', 'text-c-blue', 'text-c-pink'];
+                                                            var index = parseInt('{{ forloop.counter }}') % 3;
+                                                            var html = '';
+                                                            html += '<div class="card social-card '+ bg_color[index] +'">';
+                                                                html += '<div class="card-block">';
+                                                                    html += '<div class="row align-items-center">';
+                                                                        html += '<div class="col-auto">';
+                                                                            html += '<i class="feather icon-users f-34 '+ text_color[index] +' social-icon"></i>';
+                                                                        html += '</div>';
+                                                                        html += '<div class="col">';
+                                                                            html += '<h4>{{ i.name }}</h4>';
+                                                                            html += '<p>{{ i.chairperson }}</p>';
+                                                                            html += '<p>Total Members : {{ i.members }}</p>';
+                                                                        html += '</div>';
+                                                                    html += '</div>';
+                                                                html += '</div>';
+                                                            html += '</div>';
+                                                            document.write(html);
+                                                        </script>
                                                     </a>
                                                 </div>
                                             {% endfor %}
