--- a/StudentSupport/templates/todo.html
+++ b/StudentSupport/templates/todo.html
@@ -79,3 +79,24 @@ Replace this navbar with below
                     </div>
                 </div>
             </nav>
+
+<script>
+    Remaining Stuffs
+    //TODO : News in all department.
+    //TODO : News section in faculty, hod and principal department.
+    //TODO : Give principal right to delete and change news floating around.
+    //TODO : Committee section chairperson as well as members dashboard.
+    //TODO : change email templates.
+    //TODO : complaint section for student as well as faculty.
+    //TODO : Contact us page and issue page. (Kinjal And jasmin)
+    //TODO : Courtesy page. (Kinjal)
+    //TODO : Report PDF Generation (Jinesh)
+    //TODO : Change ccommittee widgets in every dashboard.
+    //TODO : Base templates extending.
+    //TODO : Change button and make consistent in every dashboard and in every page.
+    //TODO : Internal Documentation in each page.
+    //TODO : Removed faculty in removed subjects
+    //TODO : Add loaders in pages.
+    //TODO : Subject wise average ratings.
+    //TODO : all select should be changed to custom-select
+</script>
