--- a/StudentSupport/templates/faculty/Average_Feedback/average_feedback_end_sem.html
+++ b/StudentSupport/templates/faculty/Average_Feedback/average_feedback_end_sem.html
@@ -187,7 +187,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="col-sm-8 col-md-8 col-lg-8 m-t-20">
+                                    <div class="col-sm-8 col-md-8 col-lg-8">
                                         <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#download-report-modal">Download Report</button>
                                     </div>
                                     <div class="col-sm-4 col-md-4 col-lg-4">
