--- a/StudentSupport/templates/principal/manage_departments.html
+++ b/StudentSupport/templates/principal/manage_departments.html
@@ -174,10 +174,10 @@
                                                                                 <span class="icofont icofont-ui-edit"></span>
                                                                             </button>
                                                                             <button type="button" class="btn_save btn btn-primary waves-effect waves-light active" style="float: none;margin: 5px;">
-                                                                                <span class="icofont icofont-check"></span>
+                                                                                <span class="icofont icofont-ui-check"></span>
                                                                             </button>
                                                                             <button type="button" class="btn_cancel btn btn-danger waves-effect waves-light" style="float: none;margin: 5px;">
-                                                                                <span class="icofont icofont-close"></span>
+                                                                                <span class="icofont icofont-ui-close"></span>
                                                                             </button>
                                                                         </div>
                                                                     </td>
